Dark mode persistency data fixed

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
     .App-Container{
         height: 100vh;
         display: grid;
-        grid-template-rows: 10% 85% 5%;
+        grid-template-rows: 12% 83% 5%;
         grid-template-columns: 1fr 10fr;
         grid-template-areas:
         "h h"
