--- a/src/components/mainContent/style.css
+++ b/src/components/mainContent/style.css
@@ -45,8 +45,8 @@
 }
 
 .Content-List img{
-    height:220px;
-    width:220px;
+    height:215px;
+    width:210px;
     padding:10px;
 }
 
